# LearnAndroid

./: build.gradle  settings.gradle
activityviewbackhometest/: build.gradle
activityviewbackhometest/src/main/: AndroidManifest.xml
aidltest/: build.gradle
aidltest/src/main/: AndroidManifest.xml
baseactivity/: build.gradle
baseactivity/src/main/: AndroidManifest.xml
boardtest/: build.gradle
boardtest/src/main/: AndroidManifest.xml
contentprovidertest/: build.gradle
contentprovidertest/src/main/: AndroidManifest.xml
databindingtest/: build.gradle
databindingtest/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
imagecache/: build.gradle
imagecache/src/main/: AndroidManifest.xml
jsontest/: build.gradle
jsontest/src/main/: AndroidManifest.xml
jumper/: build.gradle
jumper/src/main/: AndroidManifest.xml
listviewtest/: build.gradle
listviewtest/src/main/: AndroidManifest.xml
localbroadcast/: build.gradle
localbroadcast/src/main/: AndroidManifest.xml
mvptest/: build.gradle
mvptest/src/main/: AndroidManifest.xml
mvvmtest/: build.gradle
mvvmtest/src/main/: AndroidManifest.xml
nettytest/: build.gradle
opencvlib/: build.gradle
opencvlib/src/main/: AndroidManifest.xml  CMakeLists.txt
opencvlib/src/main/cpp/: native-lib.cpp
opencvlib/src/main/java/com/zhaocius/opencvlib/: OpenCVManager.java
pressscreentest/: build.gradle
retrofit/: build.gradle
screenrecordertest/: build.gradle
viewgrouptest/: build.gradle
webviewtest/: build.gradle
whiteboard/: build.gradle
(+189 files in other folders)
